--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Joe Becher <jwbecher@drazisil.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv-safe": "^6.1.0"
+  }
 }
