--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Joe Becher <jwbecher@drazisil.com>",
   "license": "MIT",
   "dependencies": {
+    "@slack/web-api": "^5.0.1",
     "dotenv-safe": "^6.1.0"
   }
 }
