--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@slack/web-api": "^5.0.1",
-    "dotenv-safe": "^6.1.0"
+    "dotenv-safe": "^6.1.0",
+    "moment": "^2.24.0"
   }
 }
